--- a/ExemploHibernate_maven/src/main/java/view/FrmViewHome.form
+++ b/ExemploHibernate_maven/src/main/java/view/FrmViewHome.form
@@ -343,6 +343,9 @@
                                     </Property>
                                     <Property name="toolTipText" type="java.lang.String" value=""/>
                                   </Properties>
+                                  <AuxValues>
+                                    <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="FrmViewHome_jPanel10"/>
+                                  </AuxValues>
 
                                   <Layout>
                                     <DimensionLayout dim="0">
