Implementação formatacao mascaras

--- a/ExemploHibernate_maven/src/main/java/view/FrmViewHome.form
+++ b/ExemploHibernate_maven/src/main/java/view/FrmViewHome.form
@@ -198,8 +198,8 @@
                           </Properties>
                           <Constraints>
                             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                              <JTabbedPaneConstraints tabName="Ediar">
-                                <Property name="tabTitle" type="java.lang.String" value="Ediar"/>
+                              <JTabbedPaneConstraints tabName="Editar">
+                                <Property name="tabTitle" type="java.lang.String" value="Editar"/>
                               </JTabbedPaneConstraints>
                             </Constraint>
                           </Constraints>
@@ -214,10 +214,10 @@
                                           <Component id="labelPreco" alignment="0" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" attributes="0">
+                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                           <Component id="botaoAlterarLivro" min="-2" pref="127" max="-2" attributes="0"/>
-                                          <Component id="campoPrecoLivro" min="-2" pref="92" max="-2" attributes="0"/>
-                                          <Component id="campoTituloLivro" min="-2" pref="189" max="-2" attributes="0"/>
+                                          <Component id="campoAlterarTituloLivro" pref="189" max="32767" attributes="0"/>
+                                          <Component id="campoAlterarPrecoLivro" alignment="0" max="32767" attributes="0"/>
                                       </Group>
                                       <EmptySpace pref="185" max="32767" attributes="0"/>
                                   </Group>
@@ -228,13 +228,13 @@
                                   <Group type="102" alignment="0" attributes="0">
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="3" attributes="0">
-                                          <Component id="campoTituloLivro" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          <Component id="campoAlterarTituloLivro" alignment="3" min="-2" max="-2" attributes="0"/>
                                           <Component id="labelTitulo" alignment="3" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="3" attributes="0">
                                           <Component id="labelPreco" alignment="3" min="-2" max="-2" attributes="0"/>
-                                          <Component id="campoPrecoLivro" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          <Component id="campoAlterarPrecoLivro" alignment="3" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Component id="botaoAlterarLivro" min="-2" max="-2" attributes="0"/>
@@ -244,9 +244,9 @@
                             </DimensionLayout>
                           </Layout>
                           <SubComponents>
-                            <Component class="javax.swing.JTextField" name="campoTituloLivro">
+                            <Component class="javax.swing.JTextField" name="campoAlterarTituloLivro">
                             </Component>
-                            <Component class="javax.swing.JTextField" name="campoPrecoLivro">
+                            <Component class="javax.swing.JTextField" name="campoAlterarPrecoLivro">
                             </Component>
                             <Component class="javax.swing.JLabel" name="labelPreco">
                               <Properties>
