--- a/ExemploHibernate_maven/src/main/java/view/FrmViewHome.form
+++ b/ExemploHibernate_maven/src/main/java/view/FrmViewHome.form
@@ -215,9 +215,9 @@
                                       </Group>
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                          <Component id="botaoAlterarLivro" min="-2" pref="127" max="-2" attributes="0"/>
                                           <Component id="campoAlterarTituloLivro" pref="189" max="32767" attributes="0"/>
                                           <Component id="campoAlterarPrecoLivro" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="botaoAlterarLivro" alignment="1" min="-2" pref="127" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace pref="185" max="32767" attributes="0"/>
                                   </Group>
