--- a/ExemploHibernate_maven/src/main/java/view/FrmViewHome.form
+++ b/ExemploHibernate_maven/src/main/java/view/FrmViewHome.form
@@ -600,7 +600,7 @@
                               <Properties>
                                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                                   <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                                    <TitledBorder title="Editar livro"/>
+                                    <TitledBorder title="Editar autor"/>
                                   </Border>
                                 </Property>
                               </Properties>
@@ -708,7 +708,7 @@
                               <Properties>
                                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                                   <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                                    <TitledBorder title="Incluir novo livro"/>
+                                    <TitledBorder title="Incluir novo autor"/>
                                   </Border>
                                 </Property>
                                 <Property name="toolTipText" type="java.lang.String" value=""/>
